# DistroShelf

./: .gitignore  AGENTS.md  Cargo.toml  FLATPAK_TERMINALS.md  README.md  com.ranfdev.DistroHome.json  com.ranfdev.DistroShelf.json  meson.build  meson_options.txt
.githooks/: checks.sh  install.sh  pre-commit
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: Master Planner.agent.md  architect.agent.md  gnome-doc-librarian.md  kanban-writer.agent.md  reviewer.agent.md  task-splitter.agent.md
.github/prompts/: release.prompt.md
.github/workflows/: flatpak.yml
build-aux/: dist-vendor.sh  update-distrobox-release.py
data/: com.ranfdev.DistroHome.desktop.in  com.ranfdev.DistroHome.gschema.xml  com.ranfdev.DistroHome.metainfo.xml.in  com.ranfdev.DistroHome.service.in  com.ranfdev.DistroShelf.desktop.in  com.ranfdev.DistroShelf.gschema.xml  com.ranfdev.DistroShelf.metainfo.xml.in  com.ranfdev.DistroShelf.service.in  distroshelf.gresource.xml  meson.build
data/gtk/: shortcuts-dialog.ui  window.ui
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  ar.po  de.po  distroshelf.pot  es.po  fr.po  hi.po  id.po  it.po  ja.po  ko.po  meson.build  nl.po  pl.po  pt_BR.po  ru.po  vi.po  zh_CN.po  zh_TW.po
src/: app_view_model.rs  application.rs  config.rs  config.rs.in  container.rs  container_stats.rs  create_distrobox_dialog.rs  distro_combo_row_item.rs  distro_icon.rs  distrobox_downloader.rs  distrobox_service.rs  distrobox_task.rs  distrohome.gresource.xml  distroshelf.gresource.xml  exportable_apps_dialog.rs  exportable_apps_dialog_model.rs  gtk_utils.rs  i18n.rs  image_row_item.rs  known_distros.rs  main.rs  meson.build  preferences_dialog.rs  remote_resource.rs  resource.rs  sidebar_row.rs  supported_terminals.rs  tagged_object.rs  task_manager_dialog.rs  tasks_button.rs  terminal_combo_row.rs  welcome_view.rs  welcome_view.ui  welcome_view_model.rs  window.rs  window.ui
src/backends/: container_runtime.rs  desktop_file.rs  distrobox.rs  docker.rs  flatpak.rs  mod.rs  podman.rs  supported_terminals.rs
src/container_cli/: command.rs  command_runner.rs  distrobox.rs  mod.rs  toolbox.rs
src/dialogs/: command_log_dialog.rs  (+6 more)
(+46 files in other folders)
