[package]
name = "distrohome"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
thiserror = "1.0.64"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
