[package]
name = "distroshelf"
version = "1.0.2"
edition = "2024"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.10", package = "gtk4", features = ["gnome_48"] }
thiserror = "1.0.64"
async-channel = "2.3.1"
async-process = "2.3.0"
futures = "0.3.31"
anyhow = "1.0.92"
regex = "1.11.1"
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
vte4 = { version = "0.9", features = ["v0_76"] }
async-trait = "0.1.89"

[dependencies.adw]
package = "libadwaita"
version = "0.8.0"
features = ["v1_8"]

[dev-dependencies]
smol = "2.0.2"
